# ChangeLog for net-misc/memcached
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.66 2008/04/04 13:41:12 ranger Exp $

  04 Apr 2008; Brent Baude <ranger@gentoo.org> memcached-1.2.4.ebuild:
  stable ppc64, bug 215561

  03 Apr 2008; Brent Baude <ranger@gentoo.org> memcached-1.2.4.ebuild:
  stable ppc, bug 215561

  31 Mar 2008; Jeroen Roovers <jer@gentoo.org> memcached-1.2.4.ebuild:
  Stable for HPPA (bug #215561).

  31 Mar 2008; Caleb Tennis <caleb@gentoo.org> +files/1.2.5/conf,
  +files/1.2.5/init, memcached-1.2.5.ebuild:
  Fix directory structure

  31 Mar 2008; Caleb Tennis <caleb@gentoo.org> memcached-1.2.4.ebuild:
  stable on amd64

  31 Mar 2008; Caleb Tennis <caleb@gentoo.org> -memcached-1.1.11.ebuild,
  -memcached-1.1.12.ebuild, -memcached-1.1.12-r1.ebuild,
  -memcached-1.1.12-r3.ebuild, -memcached-1.1.13_pre.ebuild,
  -memcached-1.2.1.ebuild, -memcached-1.2.2-r2.ebuild:
  remove older ebuilds

*memcached-1.2.5 (31 Mar 2008)

  31 Mar 2008; Caleb Tennis <caleb@gentoo.org> memcached-1.2.4.ebuild,
  +memcached-1.2.5.ebuild:
  bump to 1.2.5

  22 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> memcached-1.2.4.ebuild:
  Cache::Memcached is only used for some testcases in 1.2.4, so move it under
  USE=test.

*memcached-1.2.4 (21 Jan 2008)

  21 Jan 2008; Caleb Tennis <caleb@gentoo.org> -memcached-1.2.4_rc1.ebuild,
  +memcached-1.2.4.ebuild:
  version bump to 1.2.4, remove _rc1

  18 Dec 2007; Robin H. Johnson <robbat2@gentoo.org>
  memcached-1.2.1-r1.ebuild:
  Stabilize memcached-1.2.1-r1 on amd64, because I've been using it in
  production at work for >6 months.

  18 Dec 2007; Robin H. Johnson <robbat2@gentoo.org>
  -memcached-1.2.2.ebuild, -memcached-1.2.2-r1.ebuild:
  The first releases of 1.2.2 suffered from the pidfile bug, so lets ditch them.

*memcached-1.2.4_rc1 (27 Nov 2007)

  27 Nov 2007; Robin H. Johnson <robbat2@gentoo.org> +files/1.2.4/conf,