@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/memcached
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.66 2008/04/04 13:41:12 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.67 2008/05/24 16:54:47 nixnut Exp $
+
+  24 May 2008; nixnut <nixnut@gentoo.org> memcached-1.2.5.ebuild:
+  Stable on ppc wrt bug 223371
 
   04 Apr 2008; Brent Baude <ranger@gentoo.org> memcached-1.2.4.ebuild:
   stable ppc64, bug 215561
